fixed notification UI

--- a/mysite/spotifyWrapped/templates/spotifyWrapped/home.html
+++ b/mysite/spotifyWrapped/templates/spotifyWrapped/home.html
@@ -174,7 +174,7 @@
         }
 
         .notification.success {
-            background-color: #1DB954;
+            background-color: #FF4444;
             color: white;
         }
 
