--- a/mysite/spotifyWrapped/templates/spotifyWrapped/game.html
+++ b/mysite/spotifyWrapped/templates/spotifyWrapped/game.html
@@ -7,7 +7,7 @@
     <title>Rhythm Game</title>
     <link rel="stylesheet" href="{% static 'spotifyWrapped/game.css' %}" />
 </head>
-<body>
+<body style="background: #111 url('{% static 'spotifyWrapped/gameBackground.gif' %}') center center / 100% no-repeat;">
     <!-- Play Game Button -->
     <div class="play-container">
         <button id="playButton" class="play-button">Play Game</button>
