--- a/mysite/spotifyWrapped/templates/spotifyWrapped/initialLogIn.html
+++ b/mysite/spotifyWrapped/templates/spotifyWrapped/initialLogIn.html
@@ -23,5 +23,17 @@
             window.location.href = "{% url 'spotifyWrapped:spotify_login' %}";
         }
     </script>
+
+
+<script type="text/javascript"
+        src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
+</script>
+<div id="google_translate_element"></div>
+<script>
+    function googleTranslateElementInit() {
+        new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+    }
+</script>
+
 </body>
 </html>
