--- a/mysite/spotifyWrapped/templates/spotifyWrapped/slideshow.html
+++ b/mysite/spotifyWrapped/templates/spotifyWrapped/slideshow.html
@@ -166,7 +166,7 @@
     <!-- Slide 2: Total Listening Time -->
     <div class="song">
         <div class="slide-content">
-            <h2>Total Listening Time</h2>
+            <h2>Average Daily Listening Time</h2>
             <p>{{ slideshow_data.total_listening_time|floatformat:2 }} minutes</p>
         </div>
     </div>
@@ -299,5 +299,16 @@
             return cookieValue;
         }
     </script>
+
+<script type="text/javascript"
+        src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
+</script>
+<div id="google_translate_element"></div>
+<script>
+    function googleTranslateElementInit() {
+        new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+    }
+</script>
+
 </body>
 </html>
