--- a/mysite/spotifyWrapped/static/spotifyWrapped/home.css
+++ b/mysite/spotifyWrapped/static/spotifyWrapped/home.css
@@ -179,11 +179,14 @@ h1 {
     display: none;  /* Flex layout for centering */
     position: fixed;
     top: -40px;
-    left: -40px;
     width: 100%;  /* Full screen width */
     height: 100%;  /* Full screen height */
     justify-content: center;
     align-items: center;
+}
+
+#selectionModal {
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 /* Centered modal content box */
@@ -194,7 +197,7 @@ h1 {
     border-radius: 8px;
     text-align: center;
     width: 250px;  /* Set desired width */
-    max-width: 90%;  /* Responsive width */
+    max-width: 100%;  /* Responsive width */
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3); /* Optional shadow for better visibility */
 }
 
@@ -242,7 +245,6 @@ h1 {
         margin-top: 40px; /* Add some margin at the top */
         border-top: 2px solid #128b3f; /* Add a top border in a darker green */
         box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.2); /* Add a shadow for depth */
-        width: 100%; /* Full width */
         z-index: 1000; /* Ensure it stays on top */
     }
 
@@ -283,196 +285,229 @@ h1 {
     }
 
     body {
-            font-family: 'Helvetica Neue', Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-        .dark-mode {
-            background-color: #121212;
-            color: #FFFFFF;
-        }
-        .light-mode {
-            background-color: #FFFFFF;
-            color: #000000;
-        }
+        font-family: 'Helvetica Neue', Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        position: static!important;
+    }
+    .dark-mode {
+        background-color: #121212;
+        color: #FFFFFF;
+    }
+    .light-mode {
+        background-color: #FFFFFF;
+        color: #000000;
+    }
 
-        .logout-button {
-            position: absolute;
-            top: 40px;       /* Set distance from the top of the viewport */
-            left: 40px;     /* Set distance from the right side */
-            background-color: #1DB954; /* Spotify green */
-            color: white;
-            padding: 10px 15px;
-            border: none;
-            border-radius: 25px;
-            cursor: pointer;
-            font-size: 1em;
-            transition: background-color 0.7s ease, transform 0.3s ease;
-            text-decoration: none;
-        }
+    .logout-button {
+        position: absolute;
+        top: 40px;       /* Set distance from the top of the viewport */
+        left: 40px;     /* Set distance from the right side */
+        background-color: #1DB954; /* Spotify green */
+        color: white;
+        padding: 10px 15px;
+        border: none;
+        border-radius: 25px;
+        cursor: pointer;
+        font-size: 1em;
+        transition: background-color 0.7s ease, transform 0.3s ease;
+        text-decoration: none;
+    }
 
-        .logout-button:hover {
-            background-color: #ff2e1f;
-            transform: translate(0px, -4px);
-        }
+    .logout-button:hover {
+        background-color: #ff2e1f;
+        transform: translate(0px, -4px);
+    }
 
-        .login-button, #view-friend-button, .time-button, .close-button, #startSlideshowButton {
-            background-color: #1DB954;
-            color: #FFFFFF;
-            border: none;
-            padding: 10px 20px;
-            cursor: pointer;
-            border-radius: 25px;
-            margin: 10px 0;
-            transition: background-color 0.3s ease;
-        }
-        .login-button:hover, #view-friend-button:hover, .time-button:hover, .close-button:hover, #startSlideshowButton:hover {
-            background-color: #1ED760;
-        }
-        header, .friend-list-container, .wraps-section, .modal {
-            margin: 20px;
-            padding: 20px;
-            border-radius: 15px;
-            background-color: #282828;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-        .light-mode header, .light-mode .friend-list-container, .light-mode .wraps-section, .light-mode .modal {
-            background-color: #F0F0F0;
-            color: #000000;
-        }
-        header h1 {
-            font-size: 2em;
-            margin: 0;
-        }
-        .light-mode .friend-list-container select, .light-mode .friend-list-container button {
-            background-color: #FFFFFF;
-            color: #000000;
-        }
-        .light-mode .friend-list-container label {
-            color: #000000;
-        }
-        .grid-container {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-            gap: 20px;
-        }
-        .dark-mode .card {
-            background-color: #1E1E1E;
-            padding: 20px;
-            border-radius: 15px;
-            text-align: center;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-        .light-mode .card {
-            background-color: #FFFFFF;
-            color: #000000;
-        }
-        .card:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
-        }
-        .add-card {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 2em;
-            color: #1DB954;
-            cursor: pointer;
-            border: 2px dashed #1DB954;
-        }
-        .track-info {
-            margin: 10px 0;
-        }
-        .track-info img {
-            width: 100%;
-            border-radius: 10px;
-        }
-        .track-info p {
-            margin: 10px 0;
-        }
+    #view-friend-button, .time-button, .close-button, #startSlideshowButton {
+        background-color: #1DB954;
+        color: #FFFFFF;
+        border: none;
+        padding: 10px 20px;
+        cursor: pointer;
+        border-radius: 25px;
+        margin: 10px 0;
+        text-decoration: none;
+        transition: background-color 0.3s ease;
+    }
 
-        .grid-container {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 20px;
-            padding: 20px;
-        }
-        
-        .card {
-            background: white;
-            border-radius: 10px;
-            padding: 15px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
-        
-        .light-mode .add-card {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 2em;
-            cursor: pointer;
-            background: #f5f5f5;
-            transition: background 0.3s;
-        }
-        
-        .light-mode .add-card:hover {
-            background: #e0e0e0;
-        }
-        
-        .wrap-tracks {
-            max-height: 400px;
-            overflow-y: auto;
-        }
-        
-        .track-info {
-            display: flex;
-            align-items: center;
-            margin-bottom: 10px;
-            padding: 10px;
-            border-bottom: 1px solid #eee;
-        }
-        
-        .track-info img {
-            width: 60px;
-            height: 60px;
-            border-radius: 5px;
-            margin-right: 10px;
-        }
-        
-        .track-info audio {
-            width: 100%;
-            margin-top: 10px;
-        }
+    .login-button {
+        position: absolute;
+        top: 40px;       /* Set distance from the top of the viewport */
+        left: 40px;     /* Set distance from the right side */
+        background-color: #1DB954; /* Spotify green */
+        color: white;
+        padding: 10px 15px;
+        border: none;
+        border-radius: 25px;
+        cursor: pointer;
+        font-size: 1em;
+        transition: background-color 0.7s ease, transform 0.3s ease;
+        text-decoration: none;
+    }
 
-        .empty-message {
-            grid-column: 1 / -1;
-            text-align: center;
-            color: #b3b3b3;
-            padding: 20px;
-            font-style: italic;
-        }
+    .login-button:hover {
+        transform: translate(0px, -4px);
+        background-color: #1ED760;
+    }
+    #view-friend-button:hover, .time-button:hover, .close-button:hover, #startSlideshowButton:hover {
+        background-color: #1ED760;
+    }
 
-        .play-game-container {
-            display: flex;
-            justify-content: center;
-            margin-top: 20px;
-        }
+    .friend-list-container, .wraps-section {
+        margin: 20px;
+        padding: 20px;
+        border-radius: 15px;
+        background-color: #282828;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
 
-        .play-game-button {
-            display: inline-block;
-            padding: 10px 20px;
-            font-size: 18px;
-            font-weight: bold;
-            color: #fff;
-            background-color: #1DB954; /* Spotify green */
-            border: none;
-            border-radius: 5px;
-            text-decoration: none;
-            transition: background-color 0.3s;
-        }
+     header {
+        margin: 20px;
+        padding: 20px;
+        border-radius: 15px;
+        background-color: #282828;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+     }
 
-        .play-game-button:hover {
-            background-color: #1ed760; /* Slightly lighter green */
-        }
+    .light-mode header, .light-mode .friend-list-container, .light-mode .wraps-section, .light-mode .modal {
+        background-color: #F0F0F0;
+        color: #000000;
+    }
+
+    header h1 {
+        font-size: 2em;
+        margin: 0;
+    }
+    .light-mode .friend-list-container select, .light-mode .friend-list-container button {
+        background-color: #FFFFFF;
+        color: #000000;
+    }
+    .light-mode .friend-list-container label {
+        color: #000000;
+    }
+    .grid-container {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+        gap: 20px;
+    }
+    .dark-mode .card {
+        background-color: #1E1E1E;
+        padding: 20px;
+        border-radius: 15px;
+        text-align: center;
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .light-mode .card {
+        background-color: #FFFFFF;
+        color: #000000;
+    }
+    .card:hover {
+        transform: translateY(-10px);
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+    }
+    .add-card {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 2em;
+        color: #1DB954;
+        cursor: pointer;
+        border: 2px dashed #1DB954;
+    }
+    .track-info {
+        margin: 10px 0;
+    }
+    .track-info img {
+        width: 100%;
+        border-radius: 10px;
+    }
+    .track-info p {
+        margin: 10px 0;
+    }
+
+    .grid-container {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+        gap: 20px;
+        padding: 20px;
+    }
+
+    .card {
+        background: white;
+        border-radius: 10px;
+        padding: 15px;
+        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+
+    .light-mode .add-card {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 2em;
+        cursor: pointer;
+        background: #f5f5f5;
+        transition: background 0.3s;
+    }
+
+    .light-mode .add-card:hover {
+        background: #e0e0e0;
+    }
+
+    .wrap-tracks {
+        max-height: 400px;
+        overflow-y: auto;
+    }
+
+    .track-info {
+        display: flex;
+        align-items: center;
+        margin-bottom: 10px;
+        padding: 10px;
+        border-bottom: 1px solid #eee;
+    }
+
+    .track-info img {
+        width: 60px;
+        height: 60px;
+        border-radius: 5px;
+        margin-right: 10px;
+    }
+
+    .track-info audio {
+        width: 100%;
+        margin-top: 10px;
+    }
+
+    .empty-message {
+        grid-column: 1 / -1;
+        text-align: center;
+        color: #b3b3b3;
+        padding: 20px;
+        font-style: italic;
+    }
+
+    .play-game-container {
+        display: flex;
+        justify-content: center;
+        margin-top: 20px;
+    }
+
+    .play-game-button {
+        display: inline-block;
+        padding: 10px 20px;
+        font-size: 18px;
+        font-weight: bold;
+        color: #fff;
+        background-color: #1DB954; /* Spotify green */
+        border: none;
+        border-radius: 5px;
+        text-decoration: none;
+        transition: background-color 0.3s;
+    }
+
+    .play-game-button:hover {
+        background-color: #1ed760; /* Slightly lighter green */
+    }
 
         
