--- a/mysite/spotifyWrapped/static/spotifyWrapped/home.css
+++ b/mysite/spotifyWrapped/static/spotifyWrapped/home.css
@@ -475,4 +475,16 @@ h1 {
             background-color: #1ed760; /* Slightly lighter green */
         }
 
-        
+        .rotating-image {
+            animation: rotate 5s linear infinite; /* 5s duration, continuous loop */
+        }
+
+        /* Define the rotation animation */
+        @keyframes rotate {
+            0% {
+                transform: rotate(0deg); /* Start from 0 degrees */
+            }
+            100% {
+                transform: rotate(360deg); /* Rotate to 360 degrees */
+            }
+        }
